# TOGL

./: .gitignore  .gitmodules  pyproject.toml
topognn/: data_utils.py  train_model.py
